app/app.css
/* aileron font */
@import './assets/fonts/aileron/stylesheet.css';

@import 'tailwindcss';
@plugin 'tailwind-scrollbar';

@theme {
  --font-sans:
    'Aileron', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';

  --color-base-black: #000000;
  --color-base-white: #ffffff;

  --color-neutral-01: rgba(0, 0, 0, 0.56);
  --color-neutral-02: rgba(0, 0, 0, 0.32);
  --color-neutral-03: rgba(0, 0, 0, 0.2);
  --color-neutral-04: rgba(0, 0, 0, 0.08);
  --color-neutral-05: rgba(0, 0, 0, 0.05);

  --color-pink-01: rgba(53, 13, 42, 0.4);

  --color-specials-success: #03cc9c;
  --color-specials-danger: #dc2647;

  --text-heading-h0: 6rem;
  --text-heading-h0--line-height: 6rem;
  --text-heading-h0--letter-spacing: 0;
  --text-heading-h0--font-weight: 600;

  --text-heading-h1: 4rem;
  --text-heading-h1--line-height: 4.5rem;
  --text-heading-h1--letter-spacing: 0;
  --text-heading-h1--font-weight: 600;

  --text-heading-h2: 2.25rem;
  --text-heading-h2--line-height: 2.5rem;
  --text-heading-h2--letter-spacing: 0;
  --text-heading-h2--font-weight: 600;

  --text-heading-h3: 1.5rem;
  --text-heading-h3--line-height: 1.5rem;
  --text-heading-h3--letter-spacing: 0;
  --text-heading-h3--font-weight: 600;

  --text-heading-h4: 1.375rem;
  --text-heading-h4--line-height: 1.5rem;
  --text-heading-h4--letter-spacing: 0;
  --text-heading-h4--font-weight: 600;

  --text-body-sm: 0.875rem;
  --text-body-sm--line-height: 1rem;
  --text-body-sm--letter-spacing: 0;

  --text-body-md: 1rem;
  --text-body-md--line-height: 1.25rem;
  --text-body-md--letter-spacing: 0;

  --text-body-lg: 1.125rem;
  --text-body-lg--line-height: 1.5rem;
  --text-body-lg--letter-spacing: 0;

  --text-label: 0.75rem;
  --text-label--line-height: 0.75rem;
  --text-label--letter-spacing: 0;

  --blur-48: 48px;

  --shadow-bottom: 0px 8px 40px 0px rgba(0, 0, 0, 0.16);
  --shadow-bottom-bar: 0px -4px 24px 0px rgba(0, 0, 0, 0.06);
  --shadow-bottom-level-1: 0px 4px 24px 0px rgba(0, 0, 0, 0.1);
  --shadow-bottom-level-2: 0px 8px 40px 0px rgba(0, 0, 0, 0.16);
  --shadow-regular: 0px 0px 40px 0px rgba(0, 0, 0, 0.04);
}

@layer base {
  :root {
    --sidebar-width: 104px;
  }
  button {
    @apply cursor-pointer;
  }
  .voice-gradient {
    background: radial-gradient(200% 1695% at -100% 50%, #fad4d4 0%, #e4c8e5 25%, #c1dae8 50%, #e4c8e5 74.93%, #fad4d4 100%);
  }
}

@layer utilities {
  .scrollbar-medium {
    @apply scrollbar scrollbar-thumb-neutral-03 scrollbar-track-transparent scrollbar-thin;
  }
}

html,
body {
  @apply bg-white dark:bg-gray-950;

  height: 100vh;

  background:
    radial-gradient(550px at center, rgb(248, 234, 187), transparent), linear-gradient(215deg, rgb(248, 234, 187) 15%, transparent 50%),
    linear-gradient(170deg, rgb(196, 231, 195) 15%, transparent 40%), linear-gradient(51deg, rgb(199, 227, 225) 15%, transparent 50%),
    linear-gradient(340deg, rgb(253, 207, 212) 15%, transparent 50%);

  background-size: 100% 100%;
  background-blend-mode: multiply, overlay;
}

